frontend/tests/errors/ER-015/exported_top_level_array_param_rejected/test.vx
// @rfc: docs/vexel-rfc.md#declarations
// @desc: Exported function ABI forbids top-level array parameters | Exported top-level array parameter is rejected at ABI boundary

&^sum(arr:#u8[4]) -> #u8 {
    arr[0]
}

&^main() -> #i32 {
    0
}
